# Flux

./: .gitignore  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  BUILD_SUMMARY.md  CODE_PATTERNS_AND_EXAMPLES.md  COMPLETION_SUMMARY.md  CORRECT_COMMANDS.md  CRITICAL_FIXES_PLAN.md  CRITICAL_FIXES_STATUS.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  ENHANCEMENTS_SUMMARY.md  ERROR_HANDLING_GUIDE.md  FEATURE_1_ERROR_MESSAGES.md  FEATURE_2_FILE_TRANSFER_OPTIMIZATION.md  FEATURE_3_OFFLINE_MODE.md  FEATURE_4_SECURITY.md  FEATURE_5_MEMORY_BATTERY.md  FEATURE_6_FILE_BROWSER.md  FIREBASE_TEST_LAB_COMMANDS.md  FIREBASE_TEST_LAB_SETUP.md  FIXES_APPLIED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_MADE.md  INDEX.md  KNOWLEDGE_BASE_SETUP_COMPLETE.md  LEARNING_SAVED.md  NOTEBOOKLM_CLI_INSTALLED.md  PHASE_1_CHANGES_DETAILED.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_EXECUTIVE_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_IMPLEMENTATION.md  (+25 more)
.jules/: sentinel.md
.kiro/: ACTION_PLAN_NEXT_STEPS.md  COMPLETION_REPORT.md  COMPLETION_REPORT_FINAL.md  FIREBASE_TESTLAB_EXECUTION.md  FIREBASE_TESTLAB_MANUAL_GUIDE.md  FIREBASE_TESTLAB_SETUP.md  FIREBASE_TESTLAB_WEB_CONSOLE_GUIDE.md  FIXES_APPLIED.md  PERFORMANCE_TEST_SCRIPT.ps1  README.md  (+7 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: async_ops.rs  crypto.rs  discovery.rs  file_transfer.rs  mdns.rs  mod.rs  network.rs  simple.rs  transfer_engine.rs  web_sharing.rs
(+129 files in other folders)
