[package]
name = "rust_lib_flux"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
aes-gcm = "0.10.3"
flutter_rust_bridge = "=2.11.1"
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
